prevent layout shifting on load

--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -1,8 +1,16 @@
 .container {
+	--legend-padding: 16px;
+	/* hardcoded value large enough for most usernames */
+	--legend-item-width: 140px;
+
 	flex: 1;
 	min-height: 0;
 	display: grid;
-	grid-template-columns: 1fr auto;
+	grid-template-columns: 1fr calc(
+			var(--legend-item-width) +
+			var(--legend-padding) *
+			2
+		);
 	grid-template-rows: 1fr auto;
 	gap: 16px;
 
@@ -31,7 +39,7 @@
 		grid-row: 1 / -1;
 
 		.legend {
-			padding: 16px;
+			padding: var(--legend-padding);
 			display: flex;
 			flex-direction: column;
 			overflow-y: auto;
@@ -106,8 +114,7 @@
 
 	.legend & {
 		background-color: var(--bg-primary);
-		/* hardcoded large enough value for most usernames */
-		width: 140px;
+		width: var(--legend-item-width);
 
 		&.highlighted {
 			box-shadow: 0 0 12px var(--series-color);
